--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,7 @@
 Paleta de Cores
 Verde: #49a09d
 Lilás: #5f2c82
-*/
+*/ 
 
 
 * {
@@ -34,16 +34,19 @@ section#login {
     transform: translate(-50%, -50%);
     overflow: hidden;
     width: 250px;
+    height: 550px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.45);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
-section#login div#imagem {
+section#login > div#imagem {
     display: block;
     background: #5f2c82 url(../imagens/building.jpg) no-repeat left bottom;
     background-size: cover;
-    width: 250px;
     height: 200px;
 }
 
@@ -69,7 +72,7 @@ section#login div#imagem {
 #formulario div.data {
     background-color: #5f2c82;
     padding: 5px 5px;
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 #formulario div.data span {
@@ -79,7 +82,7 @@ section#login div#imagem {
 #formulario div.data input {
     width: 190px;
     padding: 5px;
-    border-radius: 8px;
+    border-radius: 10px;
     background-color: #a9dddb;
 }
 
@@ -92,13 +95,13 @@ section#login div#imagem {
     background-color: #49a09d;
     color: white;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 #formulario div#senha input {
-    margin: -5px 0 15px 0;
+    margin-top: -5px;
     background-color: white;
     color: rgb(83, 83, 83);
-    border-radius: 8px;
+    border-radius: 10px;
     border-color: rgb(121, 209, 206);
 }
