--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,6 @@ Verde: #49a09d
 Lilás: #5f2c82
 */ 
 
-
 * {
     font-family: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif;
     font-size: 1em;
@@ -31,14 +30,14 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     width: 250px;
-    height: 550px;
+    height: 530px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.45);
 
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -63,45 +62,77 @@ section#login > div#imagem {
 
 #formulario p {
     font-size: 0.8em;
-}
-
-#formulario div {
-    margin: 10px 0;
-}
-
-#formulario div.data {
-    background-color: #5f2c82;
-    padding: 5px 5px;
-    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 #formulario div.data span {
     color: white;
+    font-size: 2em;
+    width: 40px;
+    margin-top: -5px;
+    padding: 10px 0px 0px 5px;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+#formulario div.data {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    border-radius: 10px;
+    border: 1px solid #5f2c82;
 }
 
 #formulario div.data input {
-    width: 190px;
-    padding: 5px;
-    border-radius: 10px;
     background-color: #a9dddb;
+    height: 90%;
+    width: calc(100% - 45px);
+    border: 0px;
+    border-radius: 10px;
+    transform: translateY(-11px);
+}
+
+#formulario div.data input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 #formulario input[type="submit"] {
-    width: 230px;
+    display: block;
+    width: 100%;
     padding: 10px;
-}
-
-#formulario div#entrar input {
     background-color: #49a09d;
     color: white;
     border: none;
     border-radius: 10px;
 }
 
-#formulario div#senha input {
-    margin-top: -5px;
+#formulario input[type="submit"]:hover {
+    background-color: #377775;
+    cursor: pointer;
+}
+
+#formulario a.botao {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    padding: 10px;
     background-color: white;
-    color: rgb(83, 83, 83);
+    color: rgb(68, 68, 68);
     border-radius: 10px;
-    border-color: rgb(121, 209, 206);
+    border: 1px solid rgb(95, 163, 161);
+    margin-top: 5px;
+}
+
+#formulario a.botao:hover {
+    background-color: #6cc5c2;
 }
